# qt_exercise

tes024_repeater/: CMakeLists.txt  main.cpp
test001/: CMakeLists.txt  Main.qml  main.cpp
test002_checkbox/: CMakeLists.txt  Main.qml  main.cpp
test003_combo_box/: CMakeLists.txt  Main.qml  main.cpp
test004_text_field_control/: CMakeLists.txt  Main.qml  main.cpp
test005_groupbox_control/: CMakeLists.txt  Main.qml  main.cpp
test006_radio_button/: CMakeLists.txt  Main.qml  main.cpp
test007_spinbox/: CMakeLists.txt  main.cpp
test008_switch_control/: CMakeLists.txt  Main.qml  main.cpp
test009_slider_control/: CMakeLists.txt  Main.qml  main.cpp
test010_progress_bar/: CMakeLists.txt  Main.qml  main.cpp
test011_label_control/: CMakeLists.txt  main.cpp
test012_messagebox/: CMakeLists.txt  Main.qml  main.cpp
test013_font_dialog/: CMakeLists.txt  Main.qml  main.cpp
test014_color_dialog/: CMakeLists.txt  Main.qml  main.cpp
test015_file_dialog/: CMakeLists.txt  Main.qml  main.cpp
test016_folder_dialog/: CMakeLists.txt  Main.qml  main.cpp
test017_property_animation/: CMakeLists.txt  main.cpp
test018_path_animation/: CMakeLists.txt  main.cpp
test019_sequential_animation/: CMakeLists.txt  main.cpp
test020_parallel_animation/: CMakeLists.txt  Main.qml  main.cpp
test021_column_layout/: CMakeLists.txt  Main.qml  main.cpp
test022_row_layout/: CMakeLists.txt  Main.qml  main.cpp
test023_grid_layout/: CMakeLists.txt  Main.qml  main.cpp
test024_stack_layout/: CMakeLists.txt  Main.qml  main.cpp
test025_scroll_view/: CMakeLists.txt  main.cpp
test026_split_view/: CMakeLists.txt  Main.qml  main.cpp
test027_split_view/: CMakeLists.txt  Main.qml  main.cpp  page03.qml
test028_swip_view_control/: CMakeLists.txt  Main.qml  main.cpp  page01.qml  page02.qml
test_021_color_animation/: CMakeLists.txt  Main.qml  main.cpp
